added login and users

--- a/app/templates/add-movie.html
+++ b/app/templates/add-movie.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base-home.html' %} {% block content %}
 <link rel="stylesheet" href="../static/styles/base.css" />
 
 {% block header %}
@@ -24,7 +24,6 @@
             name="year"
             style="color:blue; caret-color: red;"
             id="year"
-            required
           />
           <label for="runtime">Runtime</label>
           <input
