--- a/app/templates/genre-movie-rankings.html
+++ b/app/templates/genre-movie-rankings.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base-home.html' %}
 <link rel="stylesheet" href="../static/styles/base.css" />
 
 {% block header %}
@@ -115,7 +115,7 @@
         
          {% endif %}</td>
           <td><a  href='/all-movies-year/{{movie.year}}'>  {{ movie.year }} </a></td>
-          <td><a href='/all-movies/{{movie.director}}'> {{ movie.director }} </a></td>
+          <td><a href='/all-movies/{{movie.DirectorString}}'> {{ movie.DirectorString }} </a></td>
           <td><a href='/rank-by-movie/{{movie.id}}'>Rank</a></td>
         </tr>
         {% endfor %}
