--- a/app/templates/saved-rankings.html
+++ b/app/templates/saved-rankings.html
@@ -88,13 +88,13 @@
             }
             </script></td>
           <!-- <td><a  href='/all-movies-year/{{movie.year}}'>  {{ movie.year }} </a></td> -->
-          <!-- <td><a href='/all-movies/{{movie.director}}'> {{ movie.director }} </a></td>
+          <!-- <td><a href='/all-movies/{{movie.DirectorString}}'> {{ movie.DirectorString }} </a></td>
           <td>{{ movie.runtime }}</td> -->
           <!-- <td>{{ movie.rewatchCount }}</td>
           <td>{{ movie.rewatchScore }}</td> -->
-          <!-- <td>{{ movie.genres }}</td> -->
+          <!-- <td>{{ movie.Genre }}</td> -->
           <td>{{ movie.location }}</td>
-          <td>{{ movie.watchDate }}</td>
+          <td>{{ movie.watchDateString }}</td>
           <td>{{ movie.people }}</td>
           <!-- <td>{{ movie.imdbRating }}</td>
           <td>{{ movie.rottenTomatoRating }}</td>
