--- a/app/templates/add-list.html
+++ b/app/templates/add-list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base-home.html' %} {% block content %}
 <link rel="stylesheet" href="../static/styles/base.css" />
 
 {% block header %}
