--- a/app/templates/base-home.html
+++ b/app/templates/base-home.html
@@ -94,36 +94,41 @@
     </noscript>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Home</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="/rankings-page">Rank Movies</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/lists">Lists</a>
-            </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="/genre-rankings">Genres</a>
-            </li> -->
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="/logs">Logs</a>
-            </li> -->
-            <li class="nav-item">
-              <a class="nav-link" href="/movie-finder">Movie Finder</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/all-movies">Search</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/add-movie">Add Movie</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <a class="navbar-brand" href="/">Home</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/rankings-page">Rank Movies</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/lists">Lists</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/movie-finder">Movie Finder</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/all-movies">Search</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/add-movie">Add Movie</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          {% if 'logged_in' in session %}
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+          {% endif %}
+        </ul>
+      </div>
+    </nav>
 
     <div class="wrapper" style="padding-top: 5px; padding-left: 5%; padding-right: 5%;">
       <div class="col-xl-12 col-lg-12 col-sm-12 col-md-12">{% block content %}{% endblock %}</div>
