--- a/app/templates/currently-watching.html
+++ b/app/templates/currently-watching.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base-home.html' %}
 <link rel="stylesheet" href="../static/styles/base.css" />
 
 {% block header %}
@@ -111,9 +111,9 @@
         
            {% endif %} {% if movie.onComputer %} 🖥️ {% endif %}</td>
       <td><a  href='/all-movies-year/{{movie.year}}'>  {{ movie.year }} </a></td>
-      <td><a href='/all-movies/{{movie.director}}'> {{ movie.director }} </a></td>
+      <td><a href='/all-movies/{{movie.DirectorString}}'> {{ movie.DirectorString }} </a></td>
       <td>{{ movie.runtime }}</td>
-      <td>{{ movie.genres }}</td>
+      <td>{{ movie.Genre }}</td>
       <td><a href='/log-movie/{{movie.id}}'>Watched </a></td>
       <td style=" text-align: center;
           vertical-align: middle;"><a href='/uncurrent/{{movie.id}}'>Remove Current Watch </a></td>
