--- a/app/templates/details-unwatched.html
+++ b/app/templates/details-unwatched.html
@@ -36,21 +36,39 @@
       </div>
 
       <div class="row">
+        <h4 class="col-lg-6" style="color: black; "> Plot: </h4>
+        <h4 class="col-lg-6" style="color: rgb(104, 95, 95); "> {{ movie.Plot }}</h4>
+
+      </div>
+      <div class="row">
+        <h4 class="col-lg-6" style="color: black; "> Starring: </h4>
+        <h4 class="col-lg-6" style="color: rgb(104, 95, 95); "> {{ movie.Actors }}</h4>
+
+      </div>
+
+      <div class="row">
         <h4 class="col-lg-6" style="color: black; "> Genres: </h4>
-        <h4 class="col-lg-6" style="color: rgb(104, 95, 95); "> {{ movie.genres }}</h4>
+        <h4 class="col-lg-6" style="color: rgb(104, 95, 95); "> {{ movie.Genre }}</h4>
 
       </div>
 
       <div class="row">
         <h4 class="col-lg-6" style="color: black; "> Director: </h4>
-        <h4 class="col-lg-6" style="color: rgb(104, 95, 95); "> <a href='/all-movies/{{movie.director}}'> {{ movie.director }} </a>
+        <h4 class="col-lg-6" style="color:  rgb(104, 95, 95); "> <a href='/all-movies/{{movie.DirectorString}}'> {{ movie.DirectorString }} </a>
+        </h4>
+
+      </div>
+
+      <div class="row">
+        <h4 class="col-lg-6" style="color: black; "> Writer: </h4>
+        <h4 class="col-lg-6" style="color:  rgb(104, 95, 95); "> {{ movie.Writer }} 
         </h4>
 
       </div>
 
       <div class="row">
         <h4 class="col-lg-6" style="color: black; "> Runtime: </h4>
-        <h4 class="col-lg-6" style="color: rgb(104, 95, 95); "> {{ movie.runtime }} minutes</h4>
+        <h4 class="col-lg-6" style="color:  rgb(104, 95, 95); "> {{ movie.RuntimeString }}</h4>
 
       </div>
 
@@ -59,11 +77,6 @@
         <h4 class="col-lg-6" style="color: rgb(104, 95, 95); "> {{ movie.notes }}</h4>
 
       </div>
-
-      <h4 style="color: black;">
-        Unwatched
-      </h4>
-
 
 
       <div class="row" style="padding-top: 10%;">
@@ -136,8 +149,8 @@
         
            {% endif %} {% if movie.onComputer %} 🖥️ {% endif %}</td>
                 <td><a href='/all-movies/{{movie.year}}'>{{ movie.year }}</a></td>
-                <td><a href='/all-movies/{{movie.director}}'>{{ movie.director }}</a></td>
-                <td>{{ movie.genres }}</td>
+                <td><a href='/all-movies/{{movie.DirectorString}}'>{{ movie.DirectorString }}</a></td>
+                <td>{{ movie.Genre }}</td>
               </tr>
               {% endfor %}
               {% for movie in relatedMovies %}
@@ -155,8 +168,8 @@
         
            {% endif %} {% if movie.onComputer %} 🖥️ {% endif %}</td>
                 <td><a href='/all-movies/{{movie.year}}'>{{ movie.year }}</a></td>
-                <td><a href='/all-movies/{{movie.director}}'>{{ movie.director }}</a></td>
-                <td>{{ movie.genres }}</td>
+                <td><a href='/all-movies/{{movie.DirectorString}}'>{{ movie.DirectorString }}</a></td>
+                <td>{{ movie.Genre }}</td>
               </tr>
               {% endfor %}
             </table>
@@ -189,8 +202,8 @@
         
            <!-- {% endif %}</td>
                           <td><a href='/all-movies/{{movie.year}}'>{{ movie.year }}</a></td>
-                          <td><a href='/all-movies/{{movie.director}}'>{{ movie.director }}</a></td>
-                          <td>{{ movie.genres }}</td>
+                          <td><a href='/all-movies/{{movie.DirectorString}}'>{{ movie.DirectorString }}</a></td>
+                          <td>{{ movie.Genre }}</td>
                         </tr>
                         {% endfor %}
                       </table>
