--- a/app/templates/details.html
+++ b/app/templates/details.html
@@ -105,23 +105,40 @@
 
       </div>
       
+      <div class="row">
+        <h4 class="col-lg-6" style="color: black; "> Plot: </h4>
+        <h4 class="col-lg-6" style="color: rgb(104, 95, 95); "> {{ movie.Plot }}</h4>
+
+      </div>
+      <div class="row">
+        <h4 class="col-lg-6" style="color: black; "> Starring: </h4>
+        <h4 class="col-lg-6" style="color: rgb(104, 95, 95); "> {{ movie.Actors }}</h4>
+
+      </div>
 
       <div class="row">
         <h4 class="col-lg-6" style="color: black; "> Genres: </h4>
-        <h4 class="col-lg-6" style="color: rgb(104, 95, 95); "> {{ movie.genres }}</h4>
+        <h4 class="col-lg-6" style="color: rgb(104, 95, 95); "> {{ movie.Genre }}</h4>
 
       </div>
 
       <div class="row">
         <h4 class="col-lg-6" style="color: black; "> Director: </h4>
-        <h4 class="col-lg-6" style="color:  rgb(104, 95, 95); "> <a href='/all-movies/{{movie.director}}'> {{ movie.director }} </a>
+        <h4 class="col-lg-6" style="color:  rgb(104, 95, 95); "> <a href='/all-movies/{{movie.DirectorString}}'> {{ movie.DirectorString }} </a>
+        </h4>
+
+      </div>
+
+      <div class="row">
+        <h4 class="col-lg-6" style="color: black; "> Writer: </h4>
+        <h4 class="col-lg-6" style="color:  rgb(104, 95, 95); "> {{ movie.Writer }} 
         </h4>
 
       </div>
 
       <div class="row">
         <h4 class="col-lg-6" style="color: black; "> Runtime: </h4>
-        <h4 class="col-lg-6" style="color:  rgb(104, 95, 95); "> {{ movie.runtime }} minutes</h4>
+        <h4 class="col-lg-6" style="color:  rgb(104, 95, 95); "> {{ movie.RuntimeString }}</h4>
 
       </div>
 
@@ -158,7 +175,11 @@
 
       <div class="row">
         <h4 class="col-lg-6" style="color: black; "> Recommended Stars: </h4>
-        <h4 class="col-lg-6" > <a href="/ranking-details-by-stars/{{movie.id}}">{{ movie.movieRecommendStars }}/10</a> 
+        <h4 class="col-lg-6" > <a href="/ranking-details-by-stars/{{movie.id}}">{{ movie.movieRecommendStars }}/10</a>  
+
+        </h4>
+        <h4 class="col-lg-6" style="color: black; "> Imdb Stars: </h4>
+        <h4 class="col-lg-6" > <a href="https://imdb.com/title/{{movie.imdbId}}" target="_blank">{{ movie.imdbRating }}/10</a>  
 
         </h4>
 
@@ -206,13 +227,22 @@
         <div class="col-6">
 
           <div class="btn-wrapper">
+            <input class="btn" type="button" value="Update Data"
+              onclick="location.href = '/query-data/{{movie.id}}'" />
+          </div>
+
+
+        </div>
+        <div class="col-6">
+
+          <div class="btn-wrapper">
             <input class="btn" type="button" value="Edit Movie"
               onclick="location.href = '/update-movie/{{movie.id}}'" />
           </div>
 
 
         </div>
-        <div class="col-12">
+        <div class="col-6">
           <div class="btn-wrapper">
             <input class="btn" type="button" value="Similar Movies" onclick="location.href = '/similar/{{movie.id}}'" />
 
@@ -285,7 +315,7 @@
             <span>&#128078;</span> <!-- Trash can -->
         
            {% endif %} {% if movie.onComputer %} 🖥️ {% endif %}</td>
-              <td>{{ movie.genres }}</td>
+              <td>{{ movie.Genre }}</td>
               <td style="{% if movie.stars is none or movie.stars is string and movie.stars.isdigit() == False %}color:white;
                     {% elif movie.stars|string|int >= 8 %}color:green;
                     {% elif movie.stars|string|int >= 6 %}color:orange;
@@ -310,7 +340,7 @@
             <span>&#128078;</span> <!-- Trash can -->
         
            {% endif %} {% if movie.onComputer %} 🖥️ {% endif %}</td>
-              <td style="background-color: beige;">{{ movie.genres }}</td>
+              <td style="background-color: beige;">{{ movie.Genre }}</td>
               <td style=" background-color: beige; {% if movie.stars is none or movie.stars is string and movie.stars.isdigit() == False %}color:white;
           {% elif movie.stars|string|int >= 8 %}color:green;
           {% elif movie.stars|string|int >= 6 %}color:orange;
@@ -335,7 +365,7 @@
             <span>&#128078;</span> <!-- Trash can -->
         
            {% endif %} {% if movie.onComputer %} 🖥️ {% endif %}</td>
-              <td>{{ movie.genres }}</td>
+              <td>{{ movie.Genre }}</td>
               <td style="{% if movie.stars is none or movie.stars is string and movie.stars.isdigit() == False %}color:white;
                     {% elif movie.stars|string|int >= 8 %}color:green;
                     {% elif movie.stars|string|int >= 6 %}color:orange;
