--- a/app/templates/logs-first-watch.html
+++ b/app/templates/logs-first-watch.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base-home.html' %}
 <link rel="stylesheet" href="../static/styles/base.css" />
 
 {% block header %}
@@ -171,13 +171,13 @@
             <span>&#128078;</span> <!-- Trash can -->
             {% endif %}</td>
           <!-- <td><a  href='/all-movies-year/{{movie.year}}'>  {{ movie.year }} </a></td> -->
-          <!-- <td><a href='/all-movies/{{movie.director}}'> {{ movie.director }} </a></td>
+          <!-- <td><a href='/all-movies/{{movie.DirectorString}}'> {{ movie.DirectorString }} </a></td>
           <td>{{ movie.runtime }}</td> -->
           <!-- <td>{{ movie.rewatchCount }}</td>
           <td>{{ movie.rewatchScore }}</td> -->
-          <!-- <td>{{ movie.genres }}</td> -->
+          <!-- <td>{{ movie.Genre }}</td> -->
           <td>{{ movie.location }}</td>
-          <td>{{ movie.watchDate }}</td>
+          <td>{{ movie.watchDateString }}</td>
           <td>{{ movie.people }}</td>
           <td>{{ movie.notes }}</td>
           <td>{{ movie.movieStars }}/10</td>
