--- a/app/templates/rank.html
+++ b/app/templates/rank.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base-home.html' %}
 <link rel="stylesheet" href="../static/styles/base.css" />
 
 {% block header %}
@@ -59,17 +59,22 @@
   <div class="row" id="captureThisDiv">
     <div style="background-color: #f0f0f0;" class="col-lg-4">
       <div style="color: grey; font-size: 20px;"><a
-          href='http://www.google.com/search?q={{firstMovie.title}} ({{firstMovie.year}})' target="_blank">{{
+          href='http://www.google.com/search?q={{firstMovie.title}} ({{firstMovie.year}})' title="{{firstMovie.Plot}}" target="_blank">{{
           firstMovie.title }} ({{ firstMovie.year }})</a></div>
       <div class="poster-wrapper" style="margin-top: 10px;"><a href="{{firstMovieLink}}"><img
             src="{{ firstMovie.id|get_poster(firstMovie.title, firstMovie.year, firstMovie.poster) }}" alt="Movie Poster" style="width: 100%;">
           <div class="hover-text">Rather Watch</div>
         </a></div>
-      <div style="margin-top: 10px;">Director:<a href='/all-movies/{{firstMovie.director}}' target="_blank"> <span style="font-weight: bold;">{{ firstMovie.director }}</span></a></div>
-      <div>Rating: <span style="font-weight: bold;">{{ firstMovie.stars }}/10</span> {% if firstMovie.liked == 1 %}<span style="color: red;">&#128077;</span>{% elif firstMovie.liked == 2 %}
+      <div style="margin-top: 5px;">Directed By: <a href='/all-movies/{{firstMovie.DirectorString}}' target="_blank"> <span style="font-weight: bold;">{{ firstMovie.DirectorString }}</span></a></div>
+      <!-- <div style="margin-top: 10px;">Written By:<span style="font-weight: bold;">{{ firstMovie.Writer }}</span></div> -->
+      <div style="margin-top: 5px;">Runtime: <span style="font-weight: bold;">{{ firstMovie.RuntimeString }}</span></div>
+      <div style="margin-top: 5px;">Genres: <span style="font-weight: bold;">{{ firstMovie.Genre }}</span></div>
+      <div style="margin-top: 5px;">Starring: <span style="font-weight: bold;">{{ firstMovie.Actors }}</span></div>
+      <div  style="margin-top: 5px;">Your Rating: <span style="font-weight: bold;">{{ firstMovie.stars }}/10</span> {% if firstMovie.liked == 1 %}<span style="color: red;">&#128077;</span>{% elif firstMovie.liked == 2 %}
         <span>&#129309;</span>{% elif firstMovie.liked == 3 %}<span>&#128078;</span>{% endif %}</div>
+        <div  style="margin-top: 5px;">Imdb Rating: <a href="https://imdb.com/title/{{firstMovie.imdbId}}" target="_blank"><span style="font-weight: bold;">{{ firstMovie.imdbRating }}/10</span></a> </div>
       <div class="btn-wrapper">
-        <input class="btn" type="button" value="More Details" onclick="window.open('/details/{{secondMovie.id}}')" />
+        <input class="btn" type="button" value="More Details" onclick="window.open('/details/{{firstMovie.id}}')" />
       </div>
 
       {% if firstMovie.rewatch != 1 %}
@@ -81,18 +86,21 @@
     </div>
     <div style="background-color: #f0f0f0;" class="col-lg-4">
       <div style="color: grey; font-size: 20px;"><a
-          href='http://www.google.com/search?q={{secondMovie.title}} ({{secondMovie.year}})' target="_blank">{{
+          href='http://www.google.com/search?q={{secondMovie.title}} ({{secondMovie.year}})'title="{{secondMovie.Plot}}" target="_blank">{{
           secondMovie.title }} ({{ secondMovie.year }})</a></div>
       <div class="poster-wrapper" style="margin-top: 10px;"><a href="{{secondMovieLink}}" alt="Movie Poster"
           style="width: 100%;"><img src="{{ secondMovie.id|get_poster(secondMovie.title, secondMovie.year, secondMovie.poster)}}" alt="Movie Poster"
             style="width: 100%;">
           <div class="hover-text">Rather Watch</div>
         </a></div>
-      <div style="margin-top: 10px;">Director: <a href='/all-movies/{{secondMovie.director}}' target="_blank"> <span style="font-weight: bold;">{{ secondMovie.director }}</span></a></div>
-      <div>Rating: <span style="font-weight: bold;">{{ secondMovie.stars }}/10</span> {% if secondMovie.liked == 1
-        %}<span style="color: red;">&#128077;</span>{% elif secondMovie.liked == 2 %}
-        <span>&#129309;</span>{% elif secondMovie.liked == 3 %}<span>&#128078;</span>{% endif %}
-      </div>
+        <div style="margin-top: 5px;">Directed By: <a href='/all-movies/{{secondMovie.DirectorString}}' target="_blank"> <span style="font-weight: bold;">{{ secondMovie.DirectorString }}</span></a></div>
+        <!-- <div style="margin-top: 10px;">Written By:<span style="font-weight: bold;">{{ secondMovie.Writer }}</span></div> -->
+        <div style="margin-top: 5px;">Runtime: <span style="font-weight: bold;">{{ secondMovie.RuntimeString }}</span></div>
+        <div style="margin-top: 5px;">Genres: <span style="font-weight: bold;">{{ secondMovie.Genre }}</span></div>
+        <div style="margin-top: 5px;">Starring: <span style="font-weight: bold;">{{ secondMovie.Actors }}</span></div>
+        <div  style="margin-top: 5px;">Your Rating: <span style="font-weight: bold;">{{ secondMovie.stars }}/10</span> {% if secondMovie.liked == 1 %}<span style="color: red;">&#128077;</span>{% elif secondMovie.liked == 2 %}
+          <span>&#129309;</span>{% elif secondMovie.liked == 3 %}<span>&#128078;</span>{% endif %}</div>
+          <div  style="margin-top: 5px;">Imdb Rating: <a href="https://imdb.com/title/{{secondMovie.imdbId}}" target="_blank"><span style="font-weight: bold;">{{ secondMovie.imdbRating }}/10</span></a> </div>
       <div class="btn-wrapper">
         <input class="btn" type="button" value="More Details" onclick="window.open('/details/{{secondMovie.id}}')" />
       </div>
