--- a/app/templates/ranking-details.html
+++ b/app/templates/ranking-details.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base-home.html' %}
 <link rel="stylesheet" href="../static/styles/base.css" />
 
 {% block header %}
