--- a/app/templates/rankings-with-posters.html
+++ b/app/templates/rankings-with-posters.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base-home.html' %}
 <link rel="stylesheet" href="../static/styles/base.css" />
 
 {% block header %}
@@ -151,7 +151,7 @@ window.onload = function() {
         
           {% endif %}</td>
           <!-- <td><a  href='/all-movies-year/{{movie.year}}'>  {{ movie.year }} </a></td> -->
-          <!-- <td><a href='/all-movies/{{movie.director}}'> {{ movie.director }} </a></td>
+          <!-- <td><a href='/all-movies/{{movie.DirectorString}}'> {{ movie.DirectorString }} </a></td>
           <td>{{ movie.runtime }}</td> -->
           <td>{% if movie.beatBelow %}
             <span style="color: green;">&#10003;</span> <!-- Green checkmark -->
@@ -167,7 +167,7 @@ window.onload = function() {
                     {% endif %}">
                       {{ movie.stars }}/10
                   </td>
-          <td>{{ movie.genres }}</td>
+          <td>{{ movie.Genre }}</td>
           <!-- <td>{{ movie.imdbRating }}</td>
           <td>{{ movie.rottenTomatoRating }}</td>
           <td>{{ movie.audienceRating }}</td> -->
