--- a/app/templates/add-movie.html
+++ b/app/templates/add-movie.html
@@ -11,129 +11,55 @@
       <div class="row">
         <div class="col-4">
           <label for="title">Title</label>
-          <input
-            class="form-control"
-            name="title"
-            id="title"
-            style="color:blue; caret-color: red;"
-            required
-          />
+          <input class="form-control" name="title" id="title" style="color:blue; caret-color: red;" required />
           <label for="year">Year</label>
-          <input
-            class="form-control"
-            name="year"
-            style="color:blue; caret-color: red;"
-            id="year"
-          />
-          <label for="runtime">Runtime</label>
-          <input
-            class="form-control"
-            name="runtime"
-            style="color:blue; caret-color: red;"
-            id="runtime"
-          />
+          <input class="form-control" name="year" style="color:blue; caret-color: red;" id="year" />
+          <!-- <label for="runtime">Runtime</label>
+          <input class="form-control" name="runtime" style="color:blue; caret-color: red;" id="runtime" />
           <label for="director">Director</label>
-          <input
-            class="form-control"
-            name="director"
-            style="color:blue; caret-color: red;"
-            id="director"
-          />
-          
+          <input class="form-control" name="director" style="color:blue; caret-color: red;" id="director" />
+
           <label for="firstGenre">First Genre</label>
-          <input
-            class="form-control"
-            name="firstGenre"
-            style="color:blue; caret-color: red;"
-            id="firstGenre"
-          />
+          <input class="form-control" name="firstGenre" style="color:blue; caret-color: red;" id="firstGenre" />
           <label for="secondGenre">Second Genre</label>
-          <input
-            class="form-control"
-            name="secondGenre" style="color:blue; caret-color: red;"
-            id="secondGenre"
-          />
+          <input class="form-control" name="secondGenre" style="color:blue; caret-color: red;" id="secondGenre" />
           <label for="poster">Poster File Name</label>
-          <input
-            class="form-control"
-            name="poster" style="color:blue; caret-color: red;"
-            id="poster"
-          />
+          <input class="form-control" name="poster" style="color:blue; caret-color: red;" id="poster" />
         </div>
         <div class="col-4">
           <label>Recommendation:</label>
-          <input
-            class="form-control"
-            name="recommend" style="color:blue; caret-color: red;"
-            id="recommend"
-          />
+          <input class="form-control" name="recommend" style="color:blue; caret-color: red;" id="recommend" />
           <label for="stars">Stars: (out of 10)</label>
-          <input
-            class="form-control"
-            name="stars" style="color:blue; caret-color: red;"
-            id="stars"
-          />
-          
+          <input class="form-control" name="stars" style="color:blue; caret-color: red;" id="stars" />
+
           <label for="notes">Overall Notes</label>
-          <input
-            class="form-control"
-            name="notes" style="color:blue; caret-color: red;"
-            id="notes"
-          />
+          <input class="form-control" name="notes" style="color:blue; caret-color: red;" id="notes" />
           <label for="faveQuote">Favourite Quote? :</label>
-          <input
-            class="form-control"
-            name="faveQuote" style="color:blue; caret-color: red;"
-            id="faveQuote"
-          />
-          
-    
+          <input class="form-control" name="faveQuote" style="color:blue; caret-color: red;" id="faveQuote" />
+
+
           <label for="rewatch">Do you seen want to rewatch this?</label>
-          <input
-            type="checkbox"
-            class="form-control"
-            name="rewatch" 
-            id="rewatch"
-          />
+          <input type="checkbox" class="form-control" name="rewatch" id="rewatch" />
         </div>
         <div class="col-4">
           <label for="locationOfWatch">Watch Location:</label>
-          <input
-            class="form-control"
-            name="locationOfWatch" style="color:blue; caret-color: red;"
-            id="locationOfWatch"
-          />
+          <input class="form-control" name="locationOfWatch" style="color:blue; caret-color: red;"
+            id="locationOfWatch" />
           <label for="people">Watched with?:</label>
-          <input
-            class="form-control"
-            name="people" style="color:blue; caret-color: red; ""
-            id="people"
-          />
+          <input class="form-control" name="people" style="color:blue; caret-color: red; ""
+            id=" people" />
           <label for="watchNotes">Watch Notes:</label>
-          <input
-            class="form-control"
-            name="watchNotes" style="color:blue; caret-color: red;"
-            id="watchNotes"
-          />
-          
+          <input class="form-control" name="watchNotes" style="color:blue; caret-color: red;" id="watchNotes" />
+
           <label for="date">Last Watched Date:</label>
-          <input
-            type="date"
-            class="form-control"
-            name="date" style="color:blue; caret-color: red;"
-            id="date"
-          />
+          <input type="date" class="form-control" name="date" style="color:blue; caret-color: red;" id="date" />
         </div>
-      </div>
-     
+      </div> -->
+
 
 
       <div class="btn-wrapper">
-        <input
-          class="btn"
-              type="submit"
-          value="Add Movie"
-        />
+        <input class="btn" type="submit" value="Add Movie" />
       </div>
     </div>
   </form>
