--- a/app/templates/update-movie.html
+++ b/app/templates/update-movie.html
@@ -28,7 +28,7 @@
         id="year"
         value="{{movie.year}}"
       />
-      <label for="director">Director</label>
+      <!-- <label for="director">Director</label>
       <input
         class="form-control"
         name="director" style="color:blue; caret-color: red;"
@@ -86,15 +86,15 @@
             id="notes"
             value="{{movie.notes}}"
           />
-          <!-- <textarea cols="100" rows="4" style="color:blue; caret-color: red;" value="{{movie.notes}}">
+          <textarea cols="100" rows="4" style="color:blue; caret-color: red;" value="{{movie.notes}}">
             </textarea> -->
-          <label for="faveQuote">Favourite Quote? :</label>
+          <!-- <label for="faveQuote">Favourite Quote? :</label>
           <input
             class="form-control"
             name="faveQuote" style="color:blue; caret-color: red;"
             id="faveQuote"
             value="{{movie.faveQuote}}"
-          />
+          /> -->
           <label for="rewatch">Downloaded?</label>
           <input
             type="checkbox"
